# embedup-rs

./: .gitignore  Cargo.toml  build.sh  update.sh
root/etc/podbox_update/: config.toml
root/etc/sudoers.d/: podbox
root/etc/systemd/system/: podbox_update.service
src/: api_client.rs  config.rs  error.rs  main.rs
