[package]
name = "podbox_update"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
futures-util = "0.3.31"
hex = "0.4.3"
openssl = { version = "0.10.72", features = ["vendored"] }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
ripunzip = "2.0.2"
serde = { version = "1.0.219", features = ["derive"] }
tempdir = "0.3.7"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
zip = "2.6.1"
